fix: fixed support for multiple frontend origins